<ul> spacing fix.

--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -61,12 +61,14 @@ ul {
   list-style-type: none;
   padding: 0;
   margin: 0;
-  text-indent: -1.2rem;
+  background: blue;
 }
 
 ol {
   counter-reset: item;
   padding: 0;
+  text-indent: -1.2rem;
+  background: red;
 
   li {
     margin-bottom: 1em;
